--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ for_mobile()
 <div class="col-sm-6" style="overflow: scroll;padding-left:30px">
 <h3 style="text-decoration:underline"> Instructors </h3>
 Paul Laskowski: paul@ischool.berkeley.edu<br><br>
-Gunnar Kleeman: gunnarklee@ischool.berkeley.edu<br><br>
+Gunnar Kleemann: gunnarklee@ischool.berkeley.edu<br><br>
 Mark Labovitz: mlabovitz@ischool.berkeley.edu<br><br>
 Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br><br>
 </div><br>
@@ -200,7 +200,7 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>2</td>
-<td>Discrete Random Variables</td>
+<td>R Quick Start and Discrete Random Variables</td>
 <td>2</td>
 </tr>
 <tr>
@@ -210,7 +210,7 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>4</td>
-<td>Joint Distributions of Random Variables</td>
+<td>Joint Distributions</td>
 <td>4</td>
 </tr>
 <tr>
@@ -220,17 +220,17 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>6</td>
-<td>Estimation</td>
+<td>Estimators</td>
 <td>6</td>
 </tr>
 <tr>
 <td>7</td>
-<td>Confidence Intervals and Hypothesis Testing</td>
+<td>Hypothesis Testing</td>
 <td>7</td>
 </tr>
 <tr>
 <td>8</td>
-<td>Comparing Means and Reproducibility</td>
+<td>Comparing Means</td>
 <td>8, optional videos on non-parametric tests, 2.14 and 2.15</td>
 </tr>
 <tr>
@@ -245,12 +245,12 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>11</td>
-<td> Inference in Multivariate Linear Regression</td>
+<td>Multiple OLS Regression Inference</td>
 <td>11</td>
 </tr>
 <tr>
 <td>12</td>
-<td> Linear Regression: Interpretation and More Testing</td>
+<td> Linear Model Specification</td>
 <td>12</td>
 </tr>
 <tr>
@@ -284,7 +284,7 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 <tbody>
 <tr>
 <td>1</td>
-<td>Devore Ch 2 and <a href = "https://drive.google.com/file/d/1h8DYmKeuawhBOO6WpGMmtWs0ZouZeWe8/view?usp=sharing">this handout</a> about patents</td>
+<td>Devore Ch 1 and ch 2</td>
 </tr>
 <tr>
 <td>2</td>
@@ -365,7 +365,7 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 <tr>
 <td>2</td>
 <td>unit_2_hw</td>
-<td>unit_3_hw</td>
+<td>unit_1_hw</td>
 </tr>
 <tr>
 <td>3</td>
@@ -384,23 +384,23 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>6</td>
+<td>none</td>
+<td>none</td>
+</tr>
+<tr>
+<td>7</td>
 <td>unit_6_hw</td>
 <td>Lab 1</td>
 </tr>
 <tr>
-<td>7</td>
-<td>Quiz 1 & unit_7_hw</td>
-<td>unit_6_hw</td>
-</tr>
-<tr>
 <td>8</td>
-<td>Lab 2: Comparing Means</td>
-<td>Quiz 1 & unit_7_hw</td>
+<td>Quiz 1 & unit_7_hw, Lab 2: Comparing Means</td>
+<td>unit_6_hw</td>
 </tr>
 <tr>
 <td>9</td>
 <td>none</td>
-<td>none</td>
+<td>Quiz 1 & unit_7_hw</td>
 </tr>
 <tr>
 <td>10</td>
@@ -420,17 +420,17 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 <tr>
 <td>13</td>
 <td>none</td>
-<td>?</td>
+<td>Quiz 2</td>
 </tr>
 <tr>
 <td>14</td>
 <td>none</td>
-<td>?</td>
+<td>Lab 3 Part 3</td>
 </tr>
 <tr>
 <td>15</td>
 <td>none</td>
-<td>?</td>
+<td>present and discuss lab 3</td>
 </tr>
 </tbody>
 </table>
