updated based on 1-8-7035.json

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ for_mobile()
 <div class="col-sm-6" style="overflow: scroll;padding-left:30px">
 <h3 style="text-decoration:underline"> Instructors </h3>
 Paul Laskowski: paul@ischool.berkeley.edu<br><br>
-Gunnar Kleemann: gunnarklee@ischool.berkeley.edu<br><br>
+Gunnar Kleeman: gunnarklee@ischool.berkeley.edu<br><br>
 Mark Labovitz: mlabovitz@ischool.berkeley.edu<br><br>
 Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br><br>
 </div><br>
@@ -200,7 +200,7 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>2</td>
-<td>R Quick Start and Discrete Random Variables</td>
+<td>Discrete Random Variables</td>
 <td>2</td>
 </tr>
 <tr>
@@ -210,7 +210,7 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>4</td>
-<td>Joint Distributions</td>
+<td>Joint Distributions of Random Variables</td>
 <td>4</td>
 </tr>
 <tr>
@@ -220,17 +220,17 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>6</td>
-<td>Estimators</td>
+<td>Estimation</td>
 <td>6</td>
 </tr>
 <tr>
 <td>7</td>
-<td>Hypothesis Testing</td>
+<td>Confidence Intervals and Hypothesis Testing</td>
 <td>7</td>
 </tr>
 <tr>
 <td>8</td>
-<td>Comparing Means</td>
+<td>Comparing Means and Reproducibility</td>
 <td>8, optional videos on non-parametric tests, 2.14 and 2.15</td>
 </tr>
 <tr>
@@ -245,28 +245,23 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>11</td>
-<td>Multiple OLS Regression Inference</td>
+<td> Inference in Multivariate Linear Regression</td>
 <td>11</td>
 </tr>
 <tr>
 <td>12</td>
-<td> Linear Model Specification</td>
+<td> Linear Regression: Interpretation and More Testing</td>
 <td>12</td>
 </tr>
 <tr>
 <td>13</td>
-<td>Experiments</td>
+<td>Model Specification</td>
 <td>13</td>
 </tr>
 <tr>
 <td>14</td>
-<td>Optional Content: EDA</td>
-<td>14</td>
-</tr>
-<tr>
-<td>15</td>
-<td>Optional Content: Reproducibility</td>
-<td>15</td>
+<td>Lab Presentations and Wrap-Up</td>
+<td>None</td>
 </tr>
 </tbody>
 </table>
@@ -284,15 +279,15 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 <tbody>
 <tr>
 <td>1</td>
-<td>Devore Ch 1 and ch 2</td>
+<td>Devore Ch 1 and Ch 2</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Devore Ch 3-3.4 <br> <br> Optional: Devore Ch 3.5, 3.6</td>
+<td>Devore Ch 3-3.4 <br> <br> Optional: Devore Ch 3.5, 3.6 <br><br> Fox Ch 1.1, 1.4 (at study.net)</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Devore Ch 4-4.3, 4.6 <br> <br> Optional: Devore Ch 4.4, 4.5</td>
+<td>Devore Ch 4-4.3, 4.6 and <a href = "https://drive.google.com/file/d/1h8DYmKeuawhBOO6WpGMmtWs0ZouZeWe8/view?usp=sharing">this handout</a> about patents <br> <br> Optional: Devore Ch 4.4, 4.5</td>
 </tr>
 <tr>
 <td>4</td>
@@ -300,7 +295,7 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>5</td>
-<td>Devore Ch 5.3-5.5</td>
+<td>Devore Ch 5.3-5.5  <br><br> Fox Ch 2.1, 2.2, 2.3, 3.1.1, 3.1.4, 3.2.1 (at study.net)</td>
 </tr>
 <tr>
 <td>6</td>
@@ -332,14 +327,10 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>13</td>
-<td>none</td>
+<td>TBA</td>
 </tr>
 <tr>
 <td>14</td>
-<td>none</td>
-</tr>
-<tr>
-<td>15</td>
 <td>none</td>
 </tr>
 </tbody>
@@ -384,23 +375,23 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>6</td>
-<td>none</td>
-<td>none</td>
+<td>None</td>
+<td>None</td>
 </tr>
 <tr>
 <td>7</td>
-<td>unit_6_hw</td>
+<td>Quiz 1 & unit_7_hw</td>
 <td>Lab 1</td>
 </tr>
 <tr>
 <td>8</td>
-<td>Quiz 1 & unit_7_hw, Lab 2: Comparing Means</td>
-<td>unit_6_hw</td>
+<td>Lab 2: Comparing Means</td>
+<td>Quiz 1 & unit_7_hw</td>
 </tr>
 <tr>
 <td>9</td>
 <td>none</td>
-<td>Quiz 1 & unit_7_hw</td>
+<td>none</td>
 </tr>
 <tr>
 <td>10</td>
@@ -420,17 +411,12 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 <tr>
 <td>13</td>
 <td>none</td>
-<td>Quiz 2</td>
+<td>?</td>
 </tr>
 <tr>
 <td>14</td>
 <td>none</td>
-<td>Lab 3 Part 3</td>
-</tr>
-<tr>
-<td>15</td>
-<td>none</td>
-<td>present and discuss lab 3</td>
+<td>?</td>
 </tr>
 </tbody>
 </table>
