added OH under email

--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@ for_mobile()
 <div class="row" style="margin-top:30px" >
 <div class="col-sm-6" style="overflow: scroll;padding-left:30px">
 <h3 style="text-decoration:underline"> Instructors </h3>
-Paul Laskowski: paul@ischool.berkeley.edu<br><br>
-Gunnar Kleeman: gunnarklee@ischool.berkeley.edu<br><br>
-Mark Labovitz: mlabovitz@ischool.berkeley.edu<br><br>
-Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br><br>
+Paul Laskowski: paul@ischool.berkeley.edu<br> OH: Tuesdays 2:00 PM - 3:00 PM<br><br>
+Gunnar Kleeman: gunnarklee@ischool.berkeley.edu<br> OH: Wednesdays 5:30 PM - 6:30 PM<br><br>
+Mark Labovitz: mlabovitz@ischool.berkeley.edu<br> OH: Sundays 9:00 AM - 10:00 AM<br><br>
+Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br> OH: Fridays 10:00 AM - 11:00 AM<br><br>
 </div><br>
 <div class="col-sm-6" style="overflow: scroll;padding-left:30px">
 <h3 style="text-decoration: underline"> Teaching Assitants</h3>
-Gurdit Chahal: g.s.chahal@berkeley.edu<br><br>
-Lee Moore: lee.moore@berkeley.edu<br><br>
+Gurdit Chahal: g.s.chahal@berkeley.edu<br> OH: Mondays 8:00 AM - 9:00 AM<br><br>
+Lee Moore: lee.moore@berkeley.edu<br> OH: Fridays 12:00 PM - 1:00 PM<br><br>
 </div><br>
 </div><br>
 <div>
