--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ for_mobile()
 <div class="row" style="margin-top:30px" >
 <div class="col-sm-6" style="overflow: scroll;padding-left:30px">
 <h3 style="text-decoration:underline"> Instructors </h3>
-Paul Laskowski: paul@ischool.berkeley.edu<br> OH: Tuesdays 2:00 PM - 3:00 PM<br><br>
+Paul Laskowski: paul@ischool.berkeley.edu<br> OH: Tuesdays 10:00 AM - 11:00 AM<br><br>
 Gunnar Kleeman: gunnarklee@ischool.berkeley.edu<br> OH: Wednesdays 5:30 PM - 6:30 PM<br><br>
 Mark Labovitz: mlabovitz@ischool.berkeley.edu<br> OH: Sundays 9:00 AM - 10:00 AM<br><br>
 Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br> OH: Fridays 10:00 AM - 11:00 AM<br><br>
@@ -144,17 +144,8 @@ Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br> OH: Fridays 10:00 AM - 11:00 
 <div class="col-sm-6" style="overflow: scroll;padding-left:30px">
 <h3 style="text-decoration: underline"> Teaching Assitants</h3>
 Gurdit Chahal: g.s.chahal@berkeley.edu<br> OH: Mondays 8:00 AM - 9:00 AM<br><br>
-Lee Moore: lee.moore@berkeley.edu<br> OH: Fridays 12:00 PM - 1:00 PM<br><br>
+Lee Moore: lee.moore@berkeley.edu<br> OH: Thursdays 2:30 PM - 3:30 PM<br><br>
 </div><br>
-</div><br>
-<div>
-<button href="#oh"data-toggle="tab"onclick="scroll_to_cal()"style="background-color:rgba(7, 226, 167, 0.95);border: none;color: white;padding: 15px 32px;text-align:center;text-decoration:none;display:block;margin-left: auto;margin-right: auto;cursor: pointer;font-size: 24px">Office Hours Schedule</button>
-<script>
-function scroll_to_cal() {
-var calndr = document.getElementById("calendar")
-calndr.scrollIntoView();
-}
-</script>
 </div><br>
 <div class="container-fluid">
 <h3 style="text-decoration: underline">Sections</h3>
@@ -400,23 +391,23 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>11</td>
-<td>Lab 3 Part 2 & unit_11_hw</td>
-<td>Lab 3 Part 1</td>
+<td>unit_11_hw</td>
+<td>none</td>
 </tr>
 <tr>
 <td>12</td>
-<td>Lab 3 Part 3 & Quiz 2</td>
-<td>Lab 3 Part 2 & unit_11_hw</td>
+<td>Lab 3 Part 2 & Quiz 2</td>
+<td>Lab 3 Part 1 & unit_11_hw</td>
 </tr>
 <tr>
 <td>13</td>
-<td>none</td>
-<td>?</td>
+<td>Lab 3 Part 3</td>
+<td>Lab 3 Part 2</td>
 </tr>
 <tr>
 <td>14</td>
 <td>none</td>
-<td>?</td>
+<td>Lab 3 Part 3</td>
 </tr>
 </tbody>
 </table>
