updated website per 1_21_6551.json

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@ for_mobile()
 <div class="col-sm-6" style="overflow: scroll;padding-left:30px">
 <h3 style="text-decoration:underline"> Instructors </h3>
 Paul Laskowski: paul@ischool.berkeley.edu<br> OH: Tuesdays 10:00 AM - 11:00 AM<br><br>
-Gunnar Kleeman: gunnarklee@ischool.berkeley.edu<br> OH: Wednesdays 5:30 PM - 6:30 PM<br><br>
+Gunnar Kleemann: gunnarklee@ischool.berkeley.edu<br> OH: Wednesdays 5:30 PM - 6:30 PM<br><br>
 Mark Labovitz: mlabovitz@ischool.berkeley.edu<br> OH: Sundays 9:00 AM - 10:00 AM<br><br>
-Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br> OH: Fridays 10:00 AM - 11:00 AM<br><br>
+Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br> OH: Tuesdays 6:00 PM - 7:00 PM<br><br>
 </div><br>
 <div class="col-sm-6" style="overflow: scroll;padding-left:30px">
 <h3 style="text-decoration: underline"> Teaching Assitants</h3>
-Gurdit Chahal: g.s.chahal@berkeley.edu<br> OH: Mondays 8:00 AM - 9:00 AM<br><br>
+Gurdit Chahal: g.s.chahal@berkeley.edu<br> OH: Mondays 2:00 PM - 3:00 PM<br><br>
 Lee Moore: lee.moore@berkeley.edu<br> OH: Thursdays 2:30 PM - 3:30 PM<br><br>
 </div><br>
 </div><br>
@@ -391,23 +391,23 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>11</td>
-<td>unit_11_hw</td>
-<td>none</td>
+<td>Lab 3 Part 2 & unit_11_hw</td>
+<td>Lab 3 Part 1</td>
 </tr>
 <tr>
 <td>12</td>
-<td>Lab 3 Part 2 & Quiz 2</td>
-<td>Lab 3 Part 1 & unit_11_hw</td>
+<td>Lab 3 Part 3 & Quiz 2</td>
+<td>Lab 3 Part 2 & unit_11_hw</td>
 </tr>
 <tr>
 <td>13</td>
-<td>Lab 3 Part 3</td>
-<td>Lab 3 Part 2</td>
+<td>none</td>
+<td>?</td>
 </tr>
 <tr>
 <td>14</td>
 <td>none</td>
-<td>Lab 3 Part 3</td>
+<td>?</td>
 </tr>
 </tbody>
 </table>
