updated web site with new dates

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ Majid Maki Nayeri: m_maki@ischool.berkeley.edu<br> OH: Tuesdays 6:00 PM - 7:00 P
 <h3 style="text-decoration: underline"> Teaching Assitants</h3>
 Gurdit Chahal: g.s.chahal@berkeley.edu<br> OH: Mondays 2:00 PM - 3:00 PM<br><br>
 Lee Moore: lee.moore@berkeley.edu<br> OH: Thursdays 2:30 PM - 3:30 PM<br><br>
+Julia Ying: julia_ying@berkeley.edu<br> None <br><br>
 </div><br>
 </div><br>
 <div class="container-fluid">
@@ -162,14 +163,6 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 <li class="nav-item dropdown">
 <a class="nav-link dropdown-toggle"  style=" background-color:rgba(7, 226, 167, 0.95); color:black; margin-right:1px " data-toggle="dropdown" href="#"> Calendars </a>
 <div class="dropdown-menu">
-<a class="dropdown-item" style=" background-color: rgba(7, 226, 167, 0.95); color:black; margin-right:1px  " data-toggle="tab" href="#cal_sec1"> Section 1 </a>
-<a class="dropdown-item" style=" background-color: rgba(7, 226, 167, 0.95); color:black; margin-right:1px  " data-toggle="tab" href="#cal_sec2"> Section 2 </a>
-<a class="dropdown-item" style=" background-color: rgba(7, 226, 167, 0.95); color:black; margin-right:1px  " data-toggle="tab" href="#cal_sec3"> Section 3 </a>
-<a class="dropdown-item" style=" background-color: rgba(7, 226, 167, 0.95); color:black; margin-right:1px  " data-toggle="tab" href="#cal_sec4"> Section 4 </a>
-<a class="dropdown-item" style=" background-color: rgba(7, 226, 167, 0.95); color:black; margin-right:1px  " data-toggle="tab" href="#cal_sec5"> Section 5 </a>
-<a class="dropdown-item" style=" background-color: rgba(7, 226, 167, 0.95); color:black; margin-right:1px  " data-toggle="tab" href="#cal_sec6"> Section 6 </a>
-<a class="dropdown-item" style=" background-color: rgba(7, 226, 167, 0.95); color:black; margin-right:1px  " data-toggle="tab" href="#cal_sec7"> Section 7 </a>
-<a class="dropdown-item" style=" background-color:rgba(7, 226, 167, 0.95); color:black; margin-right:1px  " data-toggle="tab" href="#oh "> Office Hours  </a>
 </div>
 </ul>
 <div class="tab-content">
@@ -238,6 +231,11 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 <td>11</td>
 <td> Inference in Multivariate Linear Regression</td>
 <td>11</td>
+</tr>
+<tr>
+<td>Spring Break</td>
+<td>None</td>
+<td>None</td>
 </tr>
 <tr>
 <td>12</td>
@@ -311,6 +309,10 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 <tr>
 <td>11</td>
 <td>Wooldridge Ch 3.4 through the end of Chapter 3, 4-4.3, 5.2</td>
+</tr>
+<tr>
+<td>Spring Break</td>
+<td>None</td>
 </tr>
 <tr>
 <td>12</td>
@@ -391,44 +393,33 @@ Section 1: Paul Laskowski, Monday, 4:00 PM, <br><br>Section 2: Paul Laskowski, T
 </tr>
 <tr>
 <td>11</td>
-<td>Lab 3 Part 2 & unit_11_hw</td>
-<td>Lab 3 Part 1</td>
+<td>None</td>
+<td>None</td>
+</tr>
+<tr>
+<td>Spring Break</td>
+<td>None</td>
+<td>None</td>
 </tr>
 <tr>
 <td>12</td>
-<td>Lab 3 Part 3 & Quiz 2</td>
-<td>Lab 3 Part 2 & unit_11_hw</td>
+<td>Lab 3 Part 2 & unit_12_hw & Quiz 2</td>
+<td>Lab 3 Part 1</td>
 </tr>
 <tr>
 <td>13</td>
-<td>none</td>
-<td>?</td>
+<td>Lab 3 Part 3</td>
+<td>Lab 3 Part 2 & unit_12_hw & Quiz 2</td>
 </tr>
 <tr>
 <td>14</td>
 <td>none</td>
-<td>?</td>
+<td>Lab 3 Part 3</td>
 </tr>
 </tbody>
 </table>
 </div>
 </div>
-<div id="cal_sec1" class="tab-pane fade" style="overflow:scroll">
-<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=berkeley.edu_j59gj30c8ob5koqtcb2ht0n31k@group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FLos_Angeles" style="border-width:0; min-width:800px" width="100%" height="800" frameborder="0" scrolling="no"></iframe></div>
-<div id="cal_sec2" class="tab-pane fade" style="overflow:scroll">
-<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=berkeley.edu_82tlmahdpok0rb469la489uku0@group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FLos_Angeles" style="border-width:0; min-width:800px" width="100%" height="800" frameborder="0" scrolling="no"></iframe></div>
-<div id="cal_sec3" class="tab-pane fade" style="overflow:scroll">
-<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=berkeley.edu_n5qdesofrfease3ctp0orp4654@group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FLos_Angeles" style="border-width:0; min-width:800px" width="100%" height="800" frameborder="0" scrolling="no"></iframe></div>
-<div id="cal_sec4" class="tab-pane fade" style="overflow:scroll">
-<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=berkeley.edu_q71mcfdd4tbqqms7dbtda4g25s@group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FLos_Angeles" style="border-width:0; min-width:800px" width="100%" height="800" frameborder="0" scrolling="no"></iframe></div>
-<div id="cal_sec5" class="tab-pane fade" style="overflow:scroll">
-<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=berkeley.edu_2mnhse8pbdk5vh7paadubb2tb4@group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FLos_Angeles" style="border-width:0; min-width:800px" width="100%" height="800" frameborder="0" scrolling="no"></iframe></div>
-<div id="cal_sec6" class="tab-pane fade" style="overflow:scroll">
-<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=berkeley.edu_rn4lfpea7m7dabkfgdusre6r7c@group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FLos_Angeles" style="border-width:0; min-width:800px" width="100%" height="800" frameborder="0" scrolling="no"></iframe></div>
-<div id="cal_sec7" class="tab-pane fade" style="overflow:scroll">
-<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=berkeley.edu_73in9g6uavvh1t1gke73b6m0mo@group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FLos_Angeles" style="border-width:0; min-width:800px" width="100%" height="800" frameborder="0" scrolling="no"></iframe></div>
-<div id="oh" class="tab-pane fade" style="overflow:scroll">
-<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=berkeley.edu_smi3q2q3o6qfvm27qr4aha1q88@group.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FLos_Angeles" style="border-width:0; min-width:800px" width="100%" height="800" frameborder="0" scrolling="no"></iframe></div>
 <br>
 </div><br>
 </div><br>
